--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pomodoro++</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Pomodoro +</h1>
-        <h2>Timer</h2>
-        <span id="time-display"></span>
-        <button id="start-btn">Start</button>
-        <button id="pause-btn">Pause</button>
-        <button id="reset-btn">Reset</button>
+        <header>
+            <h1>Pomodoro++</h1>
+        </header>
+        <main>
+            <h2>Timer</h2>
+            <div id="time-display" class="time-display">25:00</div>
+            <button id="start-btn">Start</button>
+            <button id="pause-btn">Pause</button>
+            <button id="reset-btn">Reset</button>
+        </main>
+        <script type="module" src="components/timer.js"></script>
     </body>
 </html>
