--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <button id="pause-btn">Pause</button>
             <button id="reset-btn">Reset</button>
         </main>
+        
+        <!-- Popup Modal -->
+        <div id="alarm-popup" class="popup hidden">
+        <div class="popup-content">
+            <h3>⏰ Time's up!</h3>
+            <p>Your session has ended.</p>
+            <button id="ack-btn">OK</button>
+        </div>
+        </div>
+
         <script type="module" src="components/timer.js"></script>
     </body>
 </html>
